test_suite5/ALAN/test_suite/alan-2022-examples/passing/000008_random.alan
source S begin integer M, M5, K7; relax end
