test_suite5/ALAN/test_suite/alan-2022-examples/failing/000920_mutation.alan
source D66 begin boolean B, wKs while 19 do relax end; relax end
